# snap

./: .gitignore  DESIGN  Makefile.am  README  TODO  autogen.sh  configure.ac  dbus_helper.rb  exempi.gi  import_test.rb  org.washedup.Snap.Delete.service.in  org.washedup.Snap.DeleteDaemon.service.in  org.washedup.Snap.Import.service.in  org.washedup.Snap.ImportDaemon.service.in  org.washedup.Snap.Metadata.service.in  org.washedup.Snap.Preferences.service.in  org.washedup.Snap.Rotate.service.in  org.washedup.Snap.RotateDaemon.service.in  org.washedup.Snap.Tag.service.in  org.washedup.Snap.TagDaemon.service.in  org.washedup.Snap.Thumbnail.service.in  rotate_test.rb  snap.install  tag_test.rb
data/: Makefile.am  importer.ui  main.ui  photo_view.ui  photo_viewer.ui  preferences.ui  snap.schemas  tag_viewer.ui  xmpl.pc
include/: Makefile.am  xmpl.h
po/: POTFILES.in  POTFILES.skip
src/: Makefile.am  exempi-lite.c  exempi-lite.h  importer.vala  photo_view_test.vala  photo_viewer.vala  photo_viewer_test.vala  snap.vala  snap_daemon.vala  snap_delete_daemon.vala  snap_import_daemon.vala  snap_invocation.vala  snap_metadata_daemon.vala  snap_preferences_daemon.vala  snap_request.vala  snap_rotate_daemon.vala  snap_tag_daemon.vala  snap_thumbnail_daemon.vala  tag_viewer.vala  test_exempi.c  thumb_browser.vala  xmpl-test.vala  xmpl.c  xmpl.h
vapi/: config.vapi  exempi-2.0.vapi  exempi.vapi  libexif.vapi  xmpl.vapi
