AC_INIT([snap], [0.1.0], [brian.william.davis@gmail.com], [snap])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE

# Checks for programs.
AC_PROG_CC
AM_PROG_CC_C_O
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AC_PATH_PROG(VALAC, valac, valac)
AC_SUBST(VALAC)

AH_TEMPLATE([GETTEXT_PACKAGE], [Package name for gettext])
GETTEXT_PACKAGE=snap
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
IT_PROG_INTLTOOL([0.35.0])

AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)

GLIB_REQUIRED=2.12.0
DBUS_REQUIRED=0.74
GTK_REQUIRED=2.10.0
LIBGNOME_REQUIRED=2.20.0
LIBGNOMEUI_REQUIRED=2.20.0

PKG_CHECK_MODULES(SNAP, glib-2.0 >= $GLIB_REQUIRED gobject-2.0 >= $GLIB_REQUIRED dbus-glib-1 >= $DBUS_REQUIRED gtk+-2.0 >= $GTK_REQUIRED libgnome-2.0 >= $LIBGNOME_REQUIRED libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED)
AC_SUBST(SNAP_CFLAGS)
AC_SUBST(SNAP_LIBS)

AC_CONFIG_FILES([Makefile
	data/Makefile
	po/Makefile.in])

AC_OUTPUT
